# icon-kit

./: Cargo.toml  README.md
src/: icons.rs  lib.rs  main.rs  test.rs  tests.rs
tests/: integration_test.rs
