[package]
name = "icon_enum"
version = "0.1.2"
edition = "2024"
authors = ["Remy Sedlak <reymsedlak@gmail.com>"]
description = "Rust library and CLI for generating enums from image asset folders"
license = "MIT"
repository = "https://github.com/remysedlak/icon_enum"
readme = "README.md"

[dependencies]
unicode-normalization = "0.1.24"

[[bin]]
name = "icon_enum"       # this will be the CLI executable name
path = "src/main.rs"      # points to your CLI source file